  the constraint `typ` in `let pat : typ = exp` is now directly stored
  in the value binding node in the parsetree.
  (Florian Angeletti, review by  Richard Eisenberg)

- #12125: Add Misc.print_see_manual and modify [@manual_ref] to accept
  lists for simpler printing of manual references
  (Stefan Muenzel, review by Florian Angeletti)

### Build system:

- #11590: Allow installing to a destination path containing spaces.
   (Élie Brami, review by Sébastien Hinderer and David Allsopp)

- #11243, #11248, #11268, #11420, #11675: merge the sub-makefiles into
  the root Makefile.
  (Sébastien Hinderer, review by David Allsopp and Florian Angeletti)

- #11828: Compile otherlibs/ C stubs in two version for native and bytecode
  (Olivier Nicole, review by Sébastien Hinderer and Xavier Leroy)

- #11844: Reduce verbosity of `make` logs by printing program invocations in
  shorthand (eg `OCAMLC foo.cmo`). Setting `V=1` recovers the old style (with
  full command-lines).
  (Xavier Leroy, Nicolás Ojeda Bär, review by Sébastien Hinderer)

- #11981: Reduce size of OCaml installations by removing debugging information
  from installed bytecode executables.  It is no longer possible to
  run ocamldebug over these installed bytecode executables, nor to get
  exception backtraces for them.
  (Xavier Leroy, review by David Allsopp, report by Fabrice Le Fessant)

### Bug fixes:

- #12017: Re-register finaliser only after calling user alarm in Gc.create_alarm
  (Fabrice Buoro, report by Sam Goldman, review by Guillaume Munch-Maccagnoni)

- #11887, #11893: Code duplication in pattern-matching compilation
  (Vincent Laviron, report par Greta Yorsh, review by Luc Maranget and
   Gabriel Scherer)

- #10664, #11600: Unsoundness in the typing of polymorphic methods
  involving polymorphic variants
  (Jacques Garrigue, report by Mike Shulman, review by Gabriel Scherer)

- #11302, #11412: `ocamlc` and `ocamlopt` should not remove generated files
  when they are not regular files.