@@ -79,6 +79,52 @@ maybe some arguments are missing.
 val f : t -> unit = <fun>
 |}]
 
+let f a b = a + b;;
+match f 42 with
+| _ -> ();;
+[%%expect {|
+val f : int -> int -> int = <fun>
+Line 2, characters 6-10:
+2 | match f 42 with
+          ^^^^
+Warning 5 [ignored-partial-application]: this function application is partial,
+maybe some arguments are missing.
+
+- : unit = ()
+|}]
+
+let f a b = a + b;;
+match f 42 with
+| _ -> ()
+| exception _ -> ();;
+[%%expect {|
+val f : int -> int -> int = <fun>
+Line 2, characters 6-10:
+2 | match f 42 with
+          ^^^^
+Warning 5 [ignored-partial-application]: this function application is partial,
+maybe some arguments are missing.
+
+- : unit = ()
+|}]
+
+let f a b = a + b;;
+match f 42 with
+| x -> ignore (x 34);;
+[%%expect {|
+val f : int -> int -> int = <fun>
+- : unit = ()
+|}]
+
+
+let f a b = a + b;;
+match (f 42 : _) with
+| _ -> ();;
+[%%expect {|
+val f : int -> int -> int = <fun>
+- : unit = ()
+|}]
+
 let _ = raise Exit 3;;
 [%%expect {|
 Line 1, characters 19-20:
